tests/NormalTests/paczka1/fuzzy1/31862442.err
Error in line 2: zbUfT9eb S669 34,5
Error in line 13: zbUfT9eb A737 42,7
Error in line 15: 1t1O A737 50,2
Error in line 16: zbUfT9eb S27 36,9
Error in line 14: Sziih3 A737 20,4
Error in line 22: Sziih3 S669 28,1
Error in line 34: 1t1O S669 33,0
